adds support for vertically aligning html content within a layered <div>
when the value of the option `positioned_element_class` is an array of strings:

* if the <area> element corresponding to the <a> element being constructed
  contains the following two attributes:
    - "x-" + classname
    - "x-" + classname + "-valign"

* if the value of the "valign" attribute is "middle"

then the html content is wrapped in additional html,
which renders the original html content vertically centered within the <a>

example:
  * option value:
      "positioned_element_class" = ["background-overlay","caption-text"]
  * html:
      <area shape="rect" coords="0,0,100,100" href="#example"
         class="onhover odd not-even"
         x-caption-text="<span>hello world</span>"
         x-caption-text-valign="middle" />

--- a/demo.html
+++ b/demo.html
@@ -125,7 +125,7 @@
 		<map name="demo_grid_with_classes_with_captions_map">
 			<area class="onhover odd"  shape="rect" coords="0,0,72,102"      href="#link_r1_c1" x-caption="<table width='100%' height='100%'><tr height='100%' valign='middle'><td align='center'>hello world</td></tr></table>" />
 			<area class="onhover even" shape="rect" coords="72,0,171,101"    href="#link_r1_c2" x-caption="<div style='display:table; width:100%; height:100%;'><div style='display:table-cell; vertical-align:middle; text-align:center;'>hello world</div></div>" />
-			<area class="onhover odd"  shape="rect" coords="171,0,270,101"   href="#link_r1_c3" />
+			<area class="onhover odd"  shape="rect" coords="171,0,270,101"   href="#link_r1_c3" x-caption="hello world" x-caption-valign="middle" />
 			<area class="onhover even" shape="rect" coords="270,0,371,101"   href="#link_r1_c4" />
 			<area class="onhover odd"  shape="rect" coords="371,0,469,99"    href="#link_r1_c5" />
 			<area class="onhover even" shape="rect" coords="469,0,565,97"    href="#link_r1_c6" />
